logs/dag_id=mlb_parser/run_id=manual__2023-09-12T06:32:49.218773+00:00/task_id=get_max_hr/attempt=1.log
[2023-09-12T06:33:00.601+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: mlb_parser.get_max_hr manual__2023-09-12T06:32:49.218773+00:00 [queued]>
[2023-09-12T06:33:00.607+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: mlb_parser.get_max_hr manual__2023-09-12T06:32:49.218773+00:00 [queued]>
[2023-09-12T06:33:00.608+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-12T06:33:00.615+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): get_max_hr> on 2023-09-12 06:32:49.218773+00:00
[2023-09-12T06:33:00.619+0000] {standard_task_runner.py:57} INFO - Started process 72007 to run task
[2023-09-12T06:33:00.622+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'mlb_parser', 'get_max_hr', 'manual__2023-09-12T06:32:49.218773+00:00', '--job-id', '476', '--raw', '--subdir', 'DAGS_FOLDER/mlb_parser.py', '--cfg-path', '/tmp/tmp7y14ar64']
[2023-09-12T06:33:00.624+0000] {standard_task_runner.py:85} INFO - Job 476: Subtask get_max_hr
[2023-09-12T06:33:00.654+0000] {task_command.py:415} INFO - Running <TaskInstance: mlb_parser.get_max_hr manual__2023-09-12T06:32:49.218773+00:00 [running]> on host 2e8147b3a465
[2023-09-12T06:33:00.699+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='mlb_parser' AIRFLOW_CTX_TASK_ID='get_max_hr' AIRFLOW_CTX_EXECUTION_DATE='2023-09-12T06:32:49.218773+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-12T06:32:49.218773+00:00'
[2023-09-12T06:33:00.701+0000] {sql.py:274} INFO - Executing: 
            SELECT
                'Team',
                MAX("HR")
                FROM mlb_parser
                GROUP BY 'Team';
            
[2023-09-12T06:33:00.707+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-12T06:33:00.713+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-12T06:33:00.724+0000] {sql.py:418} INFO - Running statement: 
            SELECT
                'Team',
                MAX("HR")
                FROM mlb_parser
                GROUP BY 'Team';
            , parameters: None
[2023-09-12T06:33:00.731+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: non-integer constant in GROUP BY
LINE 6:                 GROUP BY 'Team';
                                 ^

[2023-09-12T06:33:00.739+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=mlb_parser, task_id=get_max_hr, execution_date=20230912T063249, start_date=20230912T063300, end_date=20230912T063300
[2023-09-12T06:33:00.745+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 476 for task get_max_hr (non-integer constant in GROUP BY
LINE 6:                 GROUP BY 'Team';
                                 ^
; 72007)
[2023-09-12T06:33:00.757+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-12T06:33:00.767+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
